[gd_scene load_steps=5 format=3 uid="uid://bti0jyt0xggcu"]

[ext_resource type="Theme" uid="uid://3t61g0061mea" path="res://assets/theme.tres" id="1_0lpa4"]
[ext_resource type="Script" path="res://ui/items/item_gui.gd" id="2_a5dux"]
[ext_resource type="Texture2D" uid="uid://bp83kj0l0ow8x" path="res://assets/icons/coin_05d.png" id="3_mfkmo"]
[ext_resource type="Texture2D" uid="uid://b5ytemdsbmim0" path="res://assets/icons/person.png" id="4_o2hvx"]

[node name="ItemGui" type="PanelContainer"]
theme = ExtResource("1_0lpa4")
theme_type_variation = &"GoldPanel"
script = ExtResource("2_a5dux")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Button" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "5"
icon = ExtResource("3_mfkmo")
icon_alignment = 2

[node name="ButtonContainer" type="PanelContainer" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="ItemTexture" type="TextureRect" parent="HBoxContainer/ButtonContainer"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("4_o2hvx")
stretch_mode = 5

[connection signal="pressed" from="HBoxContainer/Button" to="." method="_on_button_pressed"]
